# Cpp

./: README.md
exercise1/: main.cpp
exercise1/oppgaveA/: CMakeLists.txt  main.cpp
exercise1/oppgaveB/: CMakeLists.txt  main.cpp  temperatures
exercise2/: CMakeLists.txt  oppgave1.cpp  oppgave4.cpp  oppgave5.cpp  oppgave6.cpp
exercise3/: CMakeLists.txt  Circle.h  Commodity.hpp  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp
exercise4/: CMakeLists.txt  main.cpp  oppgave2.cpp
exercise5/: CMakeLists.txt  main.cpp
exercise6/: CMakeLists.txt  main.cpp  oppgave2.cpp
exercise7/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp  set.hpp
exercise8/: CMakeLists.txt  oppg1.cpp  oppg2.cpp
exercise9/: CMakeLists.txt  oppg1.cpp  oppg2.cpp  oppg3.cpp
